# zipher-app

./: .gitignore  .gitmodules  BRAND.md  CHANGELOG.md  Cargo.toml  Dockerfile.cli  ISSUE_TEMPLATE.md  LICENSE.md  README.md  ROADMAP.md  build.env  install-aab.sh  mcp-config.example.json  pubspec.yaml
.cursor/rules/: atmosphere-brand.mdc
.github/workflows/: build-android.yml  build-ios.yml  release-cli.yml  testnet-ci.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/me/hanh/ywallet/: MainActivity.kt
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/app/src/profile/: AndroidManifest.xml
assets/: sapling-output.params  sapling-spend.params
docs/: QUICKSTART.md  agent-wallet-prd.md  hackathon-ows.md  mcp-system-prompt.md  zipher-sync-v3.md
ios/: ExportOptions.plist  Podfile  index.html  info.plist
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: accounts.dart  appsettings.dart  init.dart  main.dart  main.reflectable.dart  router.dart  sent_memos_db.dart  store2.dart  store2.freezed.dart  tablelist.dart  zipher_theme.dart
lib/coin/: coins.dart  zcash.dart  zcashtest.dart
lib/l10n/: intl_en.arb  intl_es.arb  intl_fr.arb  intl_pt.arb
lib/pages/: avatar.dart  dblogin.dart  encrypt.dart  faucet.dart  messages.dart  scan.dart  settings.dart  showqr.dart  splash.dart  swap.dart  swap_status.dart  tx.dart  utils.dart  welcome.dart  widgets.dart
lib/pages/accounts/: bip39_wordlist.dart  manager.dart  multipay.dart  new_import.dart  pay_uri.dart  rescan.dart  restore.dart  send.dart  split.dart  submit.dart  swap.dart  txplan.dart
lib/pages/accounts/swap/: history.dart  stealthex.dart
lib/pages/action/: action.dart  intent.dart  llm_intent_parser.dart  models.dart
lib/pages/action/widgets/: bet_confirmation.dart  evm_swap_confirmation.dart  llm_settings_sheet.dart  market_venue_picker.dart  polymarket_bet_confirmation.dart  polymarket_sell_confirmation.dart  sell_confirmation.dart  sweep_confirmation.dart
lib/pages/main/: balance.dart  home.dart  qr_address.dart  sync_status.dart
lib/pages/more/: about.dart  backup.dart  batch.dart  budget.dart  coin.dart  cold.dart  contacts.dart  debug_log.dart  keytool.dart  memos.dart  more.dart  pool.dart  quotes.dart  sweep.dart
lib/services/: action_executor.dart  action_history.dart  app_log.dart  chain_config.dart  encrypted_backup.dart  evm_portfolio_balance.dart  evm_rpc.dart  evm_swap.dart  funding_resolver.dart  llm_service.dart  local_storage.dart  market_venue.dart  myriad_client.dart  near_intents.dart  polymarket_client.dart  secure_key_store.dart  tx_builder.dart  wallet_registry.dart  wallet_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: engine_api.dart  wallet.dart  wallet.freezed.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner/Configs/: AppInfo.xcconfig
npm/: README.md  install.js  mcp.json  package.json
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: benchmark.rs  daemon.rs  evm_swap.rs  helpers.rs  main.rs  market.rs  payment.rs  policy.rs  serve.rs  session.rs  swap.rs  wallet.rs
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: audit.rs  cipherpay.rs  evm.rs  evm_pay.rs  evm_swap.rs  lib.rs  llm.rs  mpp.rs  myriad.rs  ows.rs  payment.rs  pending.rs  policy.rs  polymarket.rs  query.rs  research.rs  send.rs  session.rs  swap.rs  sync.rs  types.rs  vault.rs  wallet.rs  x402.rs
rust/crates/mcp-server/: Cargo.toml
rust/crates/mcp-server/src/: main.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: engine_api.rs  mod.rs  wallet.rs
rust/src/engine/: mod.rs  query.rs  send.rs  sync.rs  wallet.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_zipher.podspec
scripts/: build-ios.sh
skills/zipher-operator/: SKILL.md
skills/zipher-operator/references/: cli-commands.md
skills/zipher-operator/scripts/: check_status.sh  confirm_send.sh  pay_x402.sh  send_preflight.sh
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
