[workspace]
resolver = "2"
members = ["native/*", "rust"]

[profile.release]
lto = true
codegen-units = 1
debug = false

[patch."https://github.com/hhanh00/zcash-params.git"]
zcash_params = { path = "native/zcash-params" }

[patch."https://github.com/hhanh00/librustzcash.git"]
zcash_note_encryption = "0.2"

[patch.crates-io]
# Android 32-bit fix
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "dff7dee" }
