[package]
name = "zipher-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zipher-mcp-server"
path = "src/main.rs"

[dependencies]
zipher-engine = { path = "../engine" }
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.8"
zeroize = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
zcash_protocol = "0.7"
zcash_address = "0.10"
dirs = "6"
reqwest = "0.13"
